# system_offline

./: .gitignore  README.md  example.py  requirements.txt  requirements_part_2.txt
src/: __init__.py
src/modules/Epicenter_Estimation/: .gdrive.json  .gitignore  .pdm-python  README.md  __init__.py  download_assets.sh  models.dvc  pyproject.toml  requirements.txt  results.dvc  run_experiments.py  train.sh
src/modules/Epicenter_Estimation/.dvc/: config
src/modules/Epicenter_Estimation/notebooks/: stations_coordinates.yaml  test_baz_1234.csv
src/modules/Epicenter_Estimation/notebooks/tests/: global_feat.npy  global_feat_raw.npy  temporal_feat.npy  temporal_feat_raw.npy
src/modules/Epicenter_Estimation/notebooks/utils/: utils_eda.py
src/modules/Epicenter_Estimation/src/: utils.py
src/modules/Epicenter_Estimation/src/back_azimuth/: __init__.py  features.py  model.py  train_and_test.py  train_features_extraction.py
src/modules/Epicenter_Estimation/src/binary_classifier/: __init__.py  model.py  train_and_test.py
src/modules/Epicenter_Estimation/src/distance/: __init__.py  features.py  model.py  only_test.py  only_test_cfg.py  test_features_extraction.py  test_model.py  train_and_test.py  train_features_extraction.py
src/modules/Epicenter_Estimation/src/incidence/: __init__.py  features.py  model.py  only_test.py  only_test_cfg.py  test_features_extraction.py  test_model.py  train_and_test.py  train_features_extraction.py
src/modules/Epicenter_Estimation/src/incidence_mlp/: __init__.py  features.py  model.py  train_and_test.py  train_features_extraction.py
(+147 files in other folders)
